--- a/index.html
+++ b/index.html
@@ -2,32 +2,9 @@
 <html lang="en">
 <head>
 <title>Fintech Index</title>
-<script type="text/javascript" src="https://www.gstatic.com/charts/loader.js"></script>
-    <script type="text/javascript">
-      google.charts.load('current', {'packages':['corechart']});
-      google.charts.setOnLoadCallback(drawChart);
-
-      function drawChart() {
-        var data = google.visualization.arrayToDataTable([
-          ['Year', 'Sales', 'Expenses'],
-          ['2004',  1000,      400],
-          ['2005',  1170,      460],
-          ['2006',  660,       1120],
-          ['2007',  1030,      540]
-        ]);
-
-        var options = {
-          curveType: 'function',
-          legend: { position: 'bottom' }
-        };
-
-        var chart = new google.visualization.LineChart(document.getElementById('curve_chart'));
-
-        chart.draw(data, options);
-      }
-</script>
 <meta charset="UTF-8">
 <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-+0n0xVW2eSR5OomGNYDnhzAbDsOXxcvSN1TPprVMTNDbiYZCxYbOOl7+AMvyTG2x" crossorigin="anonymous">
+<link rel="stylesheet" href="main.css">
 </head>
 <body style="background-image: url('background.svg');
 background-repeat: no-repeat;
@@ -37,8 +14,8 @@ background-size: cover;">
   <nav class="navbar navbar-light bg-light">
     <div class="container-fluid">
       <a class="navbar-brand" href="#">
-        <img src="F-PrimeSig1A.png" alt="" width="200" height="30" >
-         <a> <h3> Fintech Index </h3></a>
+        <br /> <img src="F-PrimeSig1A.png" alt="" width="200" height="30" >
+          <h3> Fintech Index </h3>
       </a>
       <ul class="nav justify-content-end">
         <li class="nav-item">
@@ -60,7 +37,7 @@ background-size: cover;">
 <br />
 <br />
 <h2 class='market-performance-title'> <span class="badge bg-dark">The F-Prime Findex Performance</h2>
-<span id="curve_chart" style="height: 850px"></span>
+<img src='line_graph.png' class="center" width="1500px"/>
 
 <br />
 <br />
