--- a/index.html
+++ b/index.html
@@ -37,8 +37,20 @@ background-size: cover;">
 <br />
 <br />
 <h2 class='market-performance-title'> <span class="badge bg-dark">The F-Prime Findex Performance</h2>
-<img src='line_graph.png' class="center" width="1500px"/>
+  <br />
+  <br />
+  <br />
 
+
+  <img src='chart.png' class="center" width="1500px"/>
+
+<br />
+<br />
+<br />
+<br />
+<br />
+<br />
+<br />
 <br />
 <br />
 <br />
@@ -50,10 +62,18 @@ background-size: cover;">
 <table class="table table-dark table-bordered border-white">
   <thead>
     <tr>
-      <td class="table-dark table-bordered border-white"> <br /> <br /><br /> <br /> <br /> <br /> <br /> <br /> <br /> <br /> <br /> </td>
-      <td class="table-dark table-bordered border-white"> <br /> <br /><br /> <br /> <br /> <br /> <br /> <br /> <br /> <br /> <br /></td>
-      <td class="table-dark table-bordered border-white"> <br /> <br /><br /> <br /> <br /> <br /> <br /> <br /> <br /> <br /> <br /></td>
-      <td class="table-dark table-bordered border-white"> <br /> <br /><br /> <br /> <br /> <br /> <br /> <br /> <br /> <br /> <br /></td>
+      <td class="table-dark table-bordered border-white"> <br /> <br /><br /> <br /> <br /> <br /> 
+        <div class='overview'> TOTAL MARKET CAP <h1> $740B</h1> </div>
+        <br /> <br /> <br /> <br /> <br /> </td>
+      <td class="table-dark table-bordered border-white"> <br /> <br /><br /> <br /> <br /> <br /> 
+        <div class='overview'> AVERAGE MARKET CAP <h1>$13B</h1> </div>
+        <br /> <br /> <br /> <br /> <br /></td>
+      <td class="table-dark table-bordered border-white"> <br /> <br /><br /> <br /> <br /> <br /> 
+        <div class='overview'> AVERAGE REVENUE MULTIPLE <h1> 21.4x</h1> </div>
+        <br /> <br /> <br /> <br /> <br /></td>
+      <td class="table-dark table-bordered border-white"> <br /> <br /><br /> <br /> <br /> <br /> 
+        <div class='overview'> AVERAGE REVENUE GROWTH RATE <h1> 41.6%</h1>  </div>
+        <br /> <br /> <br /> <br /> <br /></td>
     </tr>
   </thead>
 </table>
@@ -64,7 +84,36 @@ background-size: cover;">
   <div class='market-performance-charte'></div>
 </div>
 
+<br />
+<br />
+<br />
+<br />
+<br />
+<br />
+<br />
+<br />
+<br />
+<br />
+<br />
+<br />
+<br />
+<br />
 
+<h2 class='blurb'>The F-Prime Fintech Index (“Findex”) is designed to track the performance of emerging, publicly traded financial technology companies. Eligible securities are added two quarters after listing in the New York Stock Exchange, Nasdaq Stock Market, NYSE American or the CBOE Exchange. Securities must have a market capitalization of USD $500M or higher and must have “seasoned” for at least three months on the aforementioned index-eligible exchanges. Findex is a capitalization-weighted index using the market capitalization on the last day of the latest quarter for all securities.
+
+ <br />
+ <br />
+
+  F-Prime Capital and our global sister funds, Eight Roads Ventures, have one of the largest fintech portfolios in venture capital. We have been at the investing in financial technology companies over the past five decades.</h2>
+
+
+<br />
+<br />
+<br />
+<br />
+<br />
+<br />
+<br />
 <br />
 <br />
 <br />
@@ -78,7 +127,7 @@ background-size: cover;">
   </div>
   <br />
 <br />
-    <table class="table">
+    <table class="table table-dark">
       <thead>
         <tr>
           <th scope="col">#</th>
