--- a/index.html
+++ b/index.html
@@ -1,21 +1,22 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-<title>Fintech Index</title>
+<title>FinTech Index</title>
 <meta charset="UTF-8">
 <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-+0n0xVW2eSR5OomGNYDnhzAbDsOXxcvSN1TPprVMTNDbiYZCxYbOOl7+AMvyTG2x" crossorigin="anonymous">
 <link rel="stylesheet" href="main.css">
 </head>
 <body style="background-image: url('background.svg');
 background-repeat: no-repeat;
-background-size: cover;">
+background-size: cover;
+">
 
 <div class='header'>
   <nav class="navbar navbar-light bg-light">
     <div class="container-fluid">
       <a class="navbar-brand" href="#">
         <br /> <img src="F-PrimeSig1A.png" alt="" width="200" height="30" >
-          <h3> Fintech Index </h3>
+          <h3> FinTech Index </h3>
       </a>
       <ul class="nav justify-content-end">
         <li class="nav-item">
@@ -33,16 +34,22 @@ background-size: cover;">
     <br />
   </nav>
 </div>
+<div style="background-image: url('prime-mark-black-bg.png')"
+
 <br />
 <br />
 <br />
-<h2 class='market-performance-title'> <span class="badge bg-dark">The F-Prime Findex Performance</h2>
+<div class='center'>
+<h2 class='market-performance-title'> <span class="badge bg-dark">The F-Prime FinTech Index Performance</h2>
+</div>
+  
   <br />
   <br />
   <br />
 
 
   <img src='chart.png' class="center" width="1500px"/>
+
 
 <br />
 <br />
@@ -77,6 +84,7 @@ background-size: cover;">
     </tr>
   </thead>
 </table>
+</div>
 
 
 <div class='market-performance'>
@@ -99,7 +107,7 @@ background-size: cover;">
 <br />
 <br />
 
-<h2 class='blurb'>The F-Prime Fintech Index (“Findex”) is designed to track the performance of emerging, publicly traded financial technology companies. Eligible securities are added two quarters after listing in the New York Stock Exchange, Nasdaq Stock Market, NYSE American or the CBOE Exchange. Securities must have a market capitalization of USD $500M or higher and must have “seasoned” for at least three months on the aforementioned index-eligible exchanges. Findex is a capitalization-weighted index using the market capitalization on the last day of the latest quarter for all securities.
+<h2 class='blurb'>The F-Prime FinTech Index is designed to track the performance of emerging, publicly traded financial technology companies. Eligible securities are added two quarters after listing in the New York Stock Exchange, Nasdaq Stock Market, NYSE American or the CBOE Exchange. Securities must have a market capitalization of USD $500M or higher and must have “seasoned” for at least three months on the aforementioned index-eligible exchanges. FinTech Index is a capitalization-weighted index using the market capitalization on the last day of the latest quarter for all securities.
 
  <br />
  <br />
@@ -122,176 +130,213 @@ background-size: cover;">
 <br />
 <br />
 
+<div class="center"> 
 <div class='companies-performance'>
   <h2 class='market-performance-title'> <span class="badge bg-dark">All Companies</h2>
   </div>
   <br />
 <br />
-    <table class="table table-dark">
-      <thead>
-        <tr>
-          <th scope="col">#</th>
-          <th scope="col">First</th>
-          <th scope="col">Last</th>
-          <th scope="col">Handle</th>
-        </tr>
-      </thead>
-      <tbody>
-        <tr>
-          <th scope="row">1</th>
-          <td>Mark</td>
-          <td>Otto</td>
-          <td>@mdo</td>
-        </tr>
-        <tr>
-          <th scope="row">2</th>
-          <td>Jacob</td>
-          <td>Thornton</td>
-          <td>@fat</td>
-        </tr>
-        <tr>
-          <th scope="row">3</th>
-          <td colspan="2">Larry the Bird</td>
-          <td>@twitter</td>
-        </tr>
-        <tr>
-          <th scope="row">1</th>
-          <td>Mark</td>
-          <td>Otto</td>
-          <td>@mdo</td>
-        </tr>
-        <tr>
-          <th scope="row">2</th>
-          <td>Jacob</td>
-          <td>Thornton</td>
-          <td>@fat</td>
-        </tr>
-        <tr>
-          <th scope="row">3</th>
-          <td colspan="2">Larry the Bird</td>
-          <td>@twitter</td>
-        </tr>
-        <tr>
-          <th scope="row">1</th>
-          <td>Mark</td>
-          <td>Otto</td>
-          <td>@mdo</td>
-        </tr>
-        <tr>
-          <th scope="row">2</th>
-          <td>Jacob</td>
-          <td>Thornton</td>
-          <td>@fat</td>
-        </tr>
-        <tr>
-          <th scope="row">3</th>
-          <td colspan="2">Larry the Bird</td>
-          <td>@twitter</td>
-        </tr>
-        <tr>
-          <th scope="row">1</th>
-          <td>Mark</td>
-          <td>Otto</td>
-          <td>@mdo</td>
-        </tr>
-        <tr>
-          <th scope="row">2</th>
-          <td>Jacob</td>
-          <td>Thornton</td>
-          <td>@fat</td>
-        </tr>
-        <tr>
-          <th scope="row">3</th>
-          <td colspan="2">Larry the Bird</td>
-          <td>@twitter</td>
-        </tr>
-        <tr>
-          <th scope="row">1</th>
-          <td>Mark</td>
-          <td>Otto</td>
-          <td>@mdo</td>
-        </tr>
-        <tr>
-          <th scope="row">2</th>
-          <td>Jacob</td>
-          <td>Thornton</td>
-          <td>@fat</td>
-        </tr>
-        <tr>
-          <th scope="row">3</th>
-          <td colspan="2">Larry the Bird</td>
-          <td>@twitter</td>
-        </tr>
-        <tr>
-          <th scope="row">1</th>
-          <td>Mark</td>
-          <td>Otto</td>
-          <td>@mdo</td>
-        </tr>
-        <tr>
-          <th scope="row">2</th>
-          <td>Jacob</td>
-          <td>Thornton</td>
-          <td>@fat</td>
-        </tr>
-        <tr>
-          <th scope="row">3</th>
-          <td colspan="2">Larry the Bird</td>
-          <td>@twitter</td>
-        </tr>
-        <tr>
-          <th scope="row">1</th>
-          <td>Mark</td>
-          <td>Otto</td>
-          <td>@mdo</td>
-        </tr>
-        <tr>
-          <th scope="row">2</th>
-          <td>Jacob</td>
-          <td>Thornton</td>
-          <td>@fat</td>
-        </tr>
-        <tr>
-          <th scope="row">3</th>
-          <td colspan="2">Larry the Bird</td>
-          <td>@twitter</td>
-        </tr>
-        <tr>
-          <th scope="row">1</th>
-          <td>Mark</td>
-          <td>Otto</td>
-          <td>@mdo</td>
-        </tr>
-        <tr>
-          <th scope="row">2</th>
-          <td>Jacob</td>
-          <td>Thornton</td>
-          <td>@fat</td>
-        </tr>
-        <tr>
-          <th scope="row">3</th>
-          <td colspan="2">Larry the Bird</td>
-          <td>@twitter</td>
-        </tr>
-        <tr>
-          <th scope="row">1</th>
-          <td>Mark</td>
-          <td>Otto</td>
-          <td>@mdo</td>
-        </tr>
-        <tr>
-          <th scope="row">2</th>
-          <td>Jacob</td>
-          <td>Thornton</td>
-          <td>@fat</td>
-        </tr>
-        <tr>
-          <th scope="row">3</th>
-          <td colspan="2">Larry the Bird</td>
-          <td>@twitter</td>
-        </tr>
-      </tbody>
-    </table>
+
+<!-- <table class="table table-striped w-primary">
+
+  <thead class="table-dark">
+    <tr>
+      <th>Company</th>
+      <th>Price</th>
+      <th>Market Cap</th>
+      <th>Revenue Growth Rate</th>
+      <th>Gross Margin</th>
+      <th>EV/Annualized Revenue</th>
+    </tr>
+  </thead>
+
+  <tbody>
+    <tr class="table-primary">
+      <th scope="row">1</th>
+      <td>PayPal</td>
+      <td>Moss</td>
+      <td>USA</td>
+      <td>New York City</td>
+      <td>Web Designer</td>
+      <td>23</td>
+
+    </tr>
+    <tr class="table-light">
+      <th scope="row">2</th>
+      <td>Square</td>
+      <td>Wintour</td>
+      <td>United Kingdom</td>
+      <td>London</td>
+      <td>Frontend Developer</td>
+      <td>36</td>
+    </tr>
+    <tr class="table-primary">
+      <th scope="row">3</th>
+      <td>Shopify</td>
+      <td>Bond</td>
+      <td>Spain</td>
+      <td>Madrid</td>
+      <td>Photographer</td>
+      <td>25</td>
+    </tr>
+    <tr class="table-light">
+      <th scope="row">4</th>
+      <td>LendingClub</td>
+      <td>Horwitz</td>
+      <td>Italy</td>
+      <td>Bari</td>
+      <td>Editor-in-chief</td>
+      <td>41</td>
+    </tr>
+    <tr class="table-primary">
+      <th scope="row">5</th>
+      <td>Janis</td>
+      <td>Joplin</td>
+      <td>Poland</td>
+      <td>Warsaw</td>
+      <td>Video Maker</td>
+      <td>39</td>
+    </tr>
+    <tr class="table-light">
+      <th scope="row">6</th>
+      <td>Gary</td>
+      <td>Winogrand</td>
+      <td>Germany</td>
+      <td>Berlin</td>
+      <td>Photographer</td>
+      <td>37</td>
+    </tr>
+    <tr class="table-primary">
+      <th scope="row">7</th>
+      <td>Angie</td>
+      <td>Smith</td>
+      <td>USA</td>
+      <td>San Francisco</td>
+      <td>Teacher</td>
+      <td>52</td>
+    </tr>
+    <tr class="table-light">
+      <th scope="row">8</th>
+      <td>John</td>
+      <td>Mattis</td>
+      <td>France</td>
+      <td>Paris</td>
+      <td>Actor</td>
+      <td>28</td>
+    </tr>
+    <tr class="table-primary">
+      <th scope="row">9</th>
+      <td>Otto</td>
+      <td>Morris</td>
+      <td>Germany</td>
+      <td>Munich</td>
+      <td>Singer</td>
+      <td>35</td>
+    </tr>
+    <tr class="table-light">
+      <th scope="row">9</th>
+      <td>Otto</td>
+      <td>Morris</td>
+      <td>Germany</td>
+      <td>Munich</td>
+      <td>Singer</td>
+      <td>35</td>
+    </tr>
+    <tr class="table-primary">
+      <th scope="row">9</th>
+      <td>Otto</td>
+      <td>Morris</td>
+      <td>Germany</td>
+      <td>Munich</td>
+      <td>Singer</td>
+      <td>35</td>
+    </tr>
+    <tr class="table-light">
+      <th scope="row">9</th>
+      <td>Otto</td>
+      <td>Morris</td>
+      <td>Germany</td>
+      <td>Munich</td>
+      <td>Singer</td>
+      <td>35</td>
+    </tr>
+    <tr class="table-primary">
+      <th scope="row">9</th>
+      <td>Otto</td>
+      <td>Morris</td>
+      <td>Germany</td>
+      <td>Munich</td>
+      <td>Singer</td>
+      <td>35</td>
+    </tr>
+    <tr class="table-light">
+      <th scope="row">9</th>
+      <td>Otto</td>
+      <td>Morris</td>
+      <td>Germany</td>
+      <td>Munich</td>
+      <td>Singer</td>
+      <td>35</td>
+    </tr>
+    <tr class="table-primary">
+      <th scope="row">9</th>
+      <td>Otto</td>
+      <td>Morris</td>
+      <td>Germany</td>
+      <td>Munich</td>
+      <td>Singer</td>
+      <td>35</td>
+    </tr>
+    <tr class="table-light">
+      <th scope="row">9</th>
+      <td>Otto</td>
+      <td>Morris</td>
+      <td>Germany</td>
+      <td>Munich</td>
+      <td>Singer</td>
+      <td>35</td>
+    </tr>
+    <tr class="table-primary">
+      <th scope="row">9</th>
+      <td>Otto</td>
+      <td>Morris</td>
+      <td>Germany</td>
+      <td>Munich</td>
+      <td>Singer</td>
+      <td>35</td>
+    </tr>
+    <tr class="table-light">
+      <th scope="row">9</th>
+      <td>Otto</td>
+      <td>Morris</td>
+      <td>Germany</td>
+      <td>Munich</td>
+      <td>Singer</td>
+      <td>35</td>
+    </tr>
+    <tr class="table-primary">
+      <th scope="row">9</th>
+      <td>Otto</td>
+      <td>Morris</td>
+      <td>Germany</td>
+      <td>Munich</td>
+      <td>Singer</td>
+      <td>35</td>
+    </tr>
+  </tbody>
+
+
+</table>
+Table -->
+
+<img src='Screen Shot 2021-05-20 at 11.17.15 PM.png' width='1500px'/>
+
+</div>
+<br /><br /><br /><br /><br /><br /><br /><br /><br />
+
+<img class= 'centerlogo' src='F-Prime-Capital-Logo.jpeg'>
+<br /><br /><br />
+
 </div>
 
 
