--- a/index.html
+++ b/index.html
@@ -70,10 +70,10 @@ background-size: cover;
   <thead>
     <tr>
       <td class="table-dark table-bordered border-white"> <br /> <br /><br /> <br /> <br /> <br /> 
-        <div class='overview'> TOTAL MARKET CAP <h1> $740B</h1> </div>
+        <div class='overview'> TOTAL MARKET CAP <h1> 740B</h1> </div>
         <br /> <br /> <br /> <br /> <br /> </td>
       <td class="table-dark table-bordered border-white"> <br /> <br /><br /> <br /> <br /> <br /> 
-        <div class='overview'> AVERAGE MARKET CAP <h1>$13B</h1> </div>
+        <div class='overview'> AVERAGE MARKET CAP <h1>13B</h1> </div>
         <br /> <br /> <br /> <br /> <br /></td>
       <td class="table-dark table-bordered border-white"> <br /> <br /><br /> <br /> <br /> <br /> 
         <div class='overview'> AVERAGE REVENUE MULTIPLE <h1> 21.4x</h1> </div>
