--- a/index.html
+++ b/index.html
@@ -48,7 +48,7 @@ background-size: cover;
   <br />
 
 
-  <img src='chart.png' class="center" width="1500px"/>
+  <img src='Group 1.png' class="center" width="1500px"/>
 
 
 <br />
