--- a/index.html
+++ b/index.html
@@ -136,7 +136,7 @@ background-size: cover;
   </div>
   <br />
 <br />
-
+<!-- This table was commented out, currently using an image of the table from the mock-up as the placeholder, will see if we can use D3 to build an interactive table that we can embed>
 <!-- <table class="table table-striped w-primary">
 
   <thead class="table-dark">
