--- a/index.html
+++ b/index.html
@@ -20,13 +20,16 @@ background-size: cover;
       </a>
       <ul class="nav justify-content-end">
         <li class="nav-item">
-          <a class="nav-link active" aria-current="page" href="#">Index</a>
+          <a class="nav-link" aria-current="page" href="#">Index</a>
         </li>
         <li class="nav-item">
-          <a class="nav-link" href="#">Market Performance</a>
+          <a class="nav-link" href="#mark_perf">Market Performance</a>
         </li>
         <li class="nav-item">
-          <a class="nav-link" href="#">Company Performance</a>
+          <a class="nav-link" href="#about">About</a>
+        </li>
+        <li class="nav-item">
+          <a class="nav-link" href="#comp_perf">Company Performance</a>
         </li>
       </ul>
     </div>
@@ -58,6 +61,7 @@ background-size: cover;
 <br />
 <br />
 <br />
+<div id="mark_perf">
 <br />
 <br />
 <br />
@@ -85,6 +89,8 @@ background-size: cover;
   </thead>
 </table>
 </div>
+</div>
+
 
 
 <div class='market-performance'>
@@ -100,6 +106,7 @@ background-size: cover;
 <br />
 <br />
 <br />
+<div id='about'>
 <br />
 <br />
 <br />
@@ -115,6 +122,7 @@ background-size: cover;
   F-Prime Capital and our global sister funds, Eight Roads Ventures, have one of the largest fintech portfolios in venture capital. We have been at the investing in financial technology companies over the past five decades.</h2>
 
 
+  
 <br />
 <br />
 <br />
@@ -123,9 +131,11 @@ background-size: cover;
 <br />
 <br />
 <br />
+</div>
 <br />
 <br />
 <br />
+<div id="comp_perf"> 
 <br />
 <br />
 <br />
@@ -337,6 +347,7 @@ Table -->
 <img class= 'centerlogo' src='F-Prime-Capital-Logo.jpeg'>
 <br /><br /><br />
 
+</div>
 </div>
 
 
