--- a/index.html
+++ b/index.html
@@ -371,12 +371,12 @@ svg.select(".x.axis") // change the x axis
 <br />
 <br />
 
-<h2 class='blurb'>The F-Prime FinTech Index is designed to track the performance of emerging, publicly traded financial technology companies. Eligible securities are added two quarters after listing in the New York Stock Exchange, Nasdaq Stock Market, NYSE American or the CBOE Exchange. Securities must have a market capitalization of USD $500M or higher and must have “seasoned” for at least three months on the aforementioned index-eligible exchanges. FinTech Index is a capitalization-weighted index using the market capitalization on the last day of the latest quarter for all securities.
+<h2 class='blurb'>The F-Prime FinTech Index is designed to track the performance of emerging, publicly traded financial technology companies.
 
  <br />
  <br />
 
-  F-Prime Capital and our global sister funds, Eight Roads Ventures, have one of the largest fintech portfolios in venture capital. We have been at the investing in financial technology companies over the past five decades.</h2>
+  F-Prime Capital and our global sister funds, Eight Roads Ventures, have one of the largest FinTech portfolios in venture capital. We have been at the investing in financial technology companies over the past five decades.</h2>
 
 
   
