--- a/index.html
+++ b/index.html
@@ -5,8 +5,8 @@
 <script src="https://code.jquery.com/jquery-3.2.1.slim.min.js" integrity="sha384-KJ3o2DKtIkvYIK3UENzmM7KCkRr/rE9/Qpg6aAZGJwFDMVNA/GpGFF93hXpG5KkN" crossorigin="anonymous"></script>
 <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.12.9/umd/popper.min.js" integrity="sha384-ApNbgh9B+Y1QKtv3Rn7W3mgPxhU9K/ScQsAP7hUibX39j7fakFPskvXusvfa0b4Q" crossorigin="anonymous"></script>
 <script src="https://cdnjs.cloudflare.com/ajax/libs/d3/3.5.17/d3.min.js"></script>
-<link href="findex-test/css/bootstrap.min.css" rel="stylesheet">
-<link rel="stylesheet" href="findex-test/main.css">
+<link href="scss/bootstrap.min.css" rel="stylesheet">
+<link rel="stylesheet" href="main.css">
 <script type="text/javascript" language="javascript" src="https://cdn.datatables.net/1.10.19/js/jquery.dataTables.min.js"></script>
     <script async src="https://www.googletagmanager.com/gtag/js?id=UA-75271964-1"></script>
     <script>
