--- a/data.html
+++ b/data.html
@@ -436,5 +436,6 @@ c+"</h1><div>"+("function"===typeof e.message?e.message(b,h,e):e.message)+"</div
 		.dt-button-info h2 {
 			display: none;
 		}
+		</style>
 </body>
 </html>
