--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
     <script src="jquery.js"></script> 
     <script> 
     $(function(){
-      $("#tableContent").load("data.html"); 
+      $("#DivContent").load("data.html"); 
     });
     </script> 
 
