--- a/index.html
+++ b/index.html
@@ -7,9 +7,9 @@
     <script src="jquery-csv.js"></script>
 
     <script src="sorttable.js"></script>
-    <script src="http://d3js.org/d3.v7.min.js"></script>
+    <script src="https://d3js.org/d3.v7.min.js"></script>
 
-    <script src="jquery.js"></script> 
+    <script src="jquery.js" type="text/javascript"></script> 
     <script> 
     $(function(){
       $("#DivContent").load("data.html"); 
