--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
     <script src="sorttable.js"></script>
     <script src="https://d3js.org/d3.v7.min.js"></script>
 
-    <script src="jquery.js" type="text/javascript"></script> 
+    <script src="jquery.js"></script> 
     <script> 
     $(function(){
       $("#DivContent").load("data.html"); 
