--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
     <script src="sorttable.js"></script>
     <script src="https://d3js.org/d3.v7.min.js"></script>
 
-    <script src="jquery.js"></script> 
+    <script src="https://code.jquery.com/jquery-3.2.1.min.js"></script> 
     <script> 
     $(function(){
       $("#DivContent").load("data.html"); 
