--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <!-- Global site tag (gtag.js) - Google Analytics -->
     <!-- CSS only -->
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
-    <script src="jquery-csv.js"></script>
+    <script src="js/jquery-csv.js"></script>
 
     <script src="sorttable.js"></script>
     <script src="https://d3js.org/d3.v7.min.js"></script>
