--- a/index.html
+++ b/index.html
@@ -1602,8 +1602,8 @@ d3.csv("Indexes.csv", function(error, data) {
     </div>
   </div>
 </footer>
-    <script type="text/javascript" src="../wp-includes/js/underscore.min_ver%3D1.8.3.js" id="underscore-js"></script>
-<script type="text/javascript" src="../wp-includes/js/backbone.min_ver%3D1.4.0.js" id="backbone-js"></script>
+    <script type="text/javascript" src="wp-includes/js/underscore.min_ver%3D1.8.3.js" id="underscore-js"></script>
+<script type="text/javascript" src="wp-includes/js/backbone.min_ver%3D1.4.0.js" id="backbone-js"></script>
 <script type="text/javascript" id="wp-api-request-js-extra">
 /* <![CDATA[ */
 var wpApiSettings = {"root":"https:\/\/fprimecapital.com\/wp-json\/","nonce":"bc0827be24","versionString":"wp\/v2\/"};
