--- a/index.html
+++ b/index.html
@@ -1459,7 +1459,7 @@ d3.csv("Indexes.csv", function(error, data) {
 <br />
 <br />
 <br />
-  <img class= 'future-ipo-img' src="Fintech_IPOs_banner.png" alt="Girl in a jacket" width="700" height="600">
+  <img class= 'future-ipo-img' src="Fintech IPOs banner.PNG" alt="Girl in a jacket" width="700" height="600">
 
 <br />
 <br />
