--- a/index.html
+++ b/index.html
@@ -159,7 +159,7 @@ table {
     }
     th {
       background: #333;
-      color: white;
+      color: #fff;
       font-weight: bold;
       cursor: s-resize;
       background-repeat: no-repeat;
@@ -283,7 +283,7 @@ table {
 
 .faang-text{
   display: inline-block;
-  margin-left: 52%;
+  margin-left: 50%;
   margin-top: -1%;
   color: #5B56EE;
 }
