--- a/index.html
+++ b/index.html
@@ -278,13 +278,13 @@ table {
   border-radius: 50%;
   display: inline-block;
   margin-left: 50%;
-  margin-top: -2%
+  margin-top: 0%
 }
 
 .faang-text{
   display: inline-block;
   margin-left: 52%;
-  margin-top: -2%;
+  margin-top: 0%;
   color: #5B56EE;
 }
 
@@ -318,6 +318,7 @@ table {
   border-top: 3px solid white;
   border-left: 3px solid white;
   border-right: 3px solid white;
+  margin-left: 50%;
   padding-right: 7px;
   text-transform: uppercase;
   border-bottom: 2px solid #A6D0D8;
