--- a/index.html
+++ b/index.html
@@ -777,7 +777,7 @@ d3.csv("Indexes1.csv", function(error, data) {
 
     // Scale the range of the data
     x.domain(d3.extent(data, function(d) { return d.Date; }));
-    y.domain([0, d3.max(data, function(d) { return Math.max(d.NASDAQ, d.FAANG, d.Fintech, d.SNP500); })]);
+    y.domain([d3.min(data, function(d) {return Math.min(d.NASDAQ, d.FAANG, d.Fintech, d.SNP500); })-.3, d3.max(data, function(d) { return Math.max(d.NASDAQ, d.FAANG, d.Fintech, d.SNP500); })]);
 
     document.getElementById("fintechValueJS").innerHTML = (data[data.length-1].Fintech*100-100).toFixed(1); 
     document.getElementById("faangValueJS").innerHTML = (data[data.length-1].FAANG*100-100).toFixed(1);
@@ -829,7 +829,7 @@ function updateAllTime() {
 	    });
     	// Scale the range of the data again 
     	x.domain(d3.extent(data, function(d) { return d.Date; }));
-	    y.domain([0, d3.max(data, function(d) {return Math.max(d.NASDAQ, d.FAANG, d.Fintech, d.SNP500); })]);
+	    y.domain([d3.min(data, function(d) {return Math.min(d.NASDAQ, d.FAANG, d.Fintech, d.SNP500); })-.3, d3.max(data, function(d) {return Math.max(d.NASDAQ, d.FAANG, d.Fintech, d.SNP500); })]);
 
       document.getElementById("fintechValueJS").innerHTML = (data[data.length-1].Fintech*100-100).toFixed(1); 
       document.getElementById("faangValueJS").innerHTML = (data[data.length-1].FAANG*100-100).toFixed(1);
@@ -884,7 +884,7 @@ d3.csv("IndexesYearly.csv", function(error, data) {
 
     // Scale the range of the data again 
     x.domain(d3.extent(data, function(d) { return d.Date; }));
-    y.domain([0, d3.max(data, function(d) {return Math.max(d.NASDAQ, d.FAANG, d.Fintech, d.SNP500); })]);
+    y.domain([d3.min(data, function(d) {return Math.min(d.NASDAQ, d.FAANG, d.Fintech, d.SNP500); })-.3, d3.max(data, function(d) {return Math.max(d.NASDAQ, d.FAANG, d.Fintech, d.SNP500); })]);
     document.getElementById("fintechValueJS").innerHTML = (data[data.length-1].Fintech*100-100).toFixed(1); 
     document.getElementById("faangValueJS").innerHTML = (data[data.length-1].FAANG*100-100).toFixed(1);
     document.getElementById("nasdaqValueJS").innerHTML = (data[data.length-1].NASDAQ*100-100).toFixed(1);
@@ -936,7 +936,7 @@ d3.csv("IndexesMonthly.csv", function(error, data) {
 
     // Scale the range of the data again 
     x.domain(d3.extent(data, function(d) { return d.Date; }));
-    y.domain([0, d3.max(data, function(d) {return Math.max(d.NASDAQ, d.FAANG, d.Fintech, d.SNP500); })]);
+    y.domain([d3.min(data, function(d) {return Math.min(d.NASDAQ, d.FAANG, d.Fintech, d.SNP500); })-.3, d3.max(data, function(d) {return Math.max(d.NASDAQ, d.FAANG, d.Fintech, d.SNP500); })]);
     document.getElementById("fintechValueJS").innerHTML = (data[data.length-1].Fintech*100-100).toFixed(1); 
     document.getElementById("faangValueJS").innerHTML = (data[data.length-1].FAANG*100-100).toFixed(1);
     document.getElementById("nasdaqValueJS").innerHTML = (data[data.length-1].NASDAQ*100-100).toFixed(1);
@@ -989,7 +989,7 @@ d3.csv("IndexesWeekly.csv", function(error, data) {
     
     // Scale the range of the data again 
     x.domain(d3.extent(data, function(d) { return d.Date; }));
-    y.domain([0, d3.max(data, function(d) {return Math.max(d.NASDAQ, d.FAANG, d.Fintech, d.SNP500); })]);
+    y.domain([d3.min(data, function(d) {return Math.min(d.NASDAQ, d.FAANG, d.Fintech, d.SNP500); })-.3, d3.max(data, function(d) {return Math.max(d.NASDAQ, d.FAANG, d.Fintech, d.SNP500); })]);
     document.getElementById("fintechValueJS").innerHTML = (data[data.length-1].Fintech*100-100).toFixed(1); 
     document.getElementById("faangValueJS").innerHTML = (data[data.length-1].FAANG*100-100).toFixed(1);
     document.getElementById("nasdaqValueJS").innerHTML = (data[data.length-1].NASDAQ*100-100).toFixed(1);
