--- a/index.html
+++ b/index.html
@@ -5,7 +5,6 @@
     <!-- CSS only -->
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
     <script src="jquery-csv.js"></script>
-
     <script src="sorttable.js"></script>
     <script src="https://d3js.org/d3.v7.min.js"></script>
 
@@ -766,7 +765,7 @@ var svg = d3.select("body")
               "translate(" + margin.left + "," + margin.top + ")");
 
 // Get the data
-d3.csv("Indexes1.csv", function(error, data) {
+d3.csv("Indexes.csv", function(error, data) {
     data.forEach(function(d) {
         d.Date = parseDate(d.Date);
         d.Fintech = +d.Fintech;
